# MetricProducerPybindings

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  requirements_dev.txt  setup.py
.github/workflows/: publish.yml
src/metric_producer/: __init__.py  metric_producer.py  metric_producer_bindings.cpp
